inverter fila - feito